------------------------------------------------------------------------------------------ 
Release date: October 2011


OpenMS 1.9 has some major changes in TOPP tool names and usage. Therefor all .ini files
for 'typed' TOPP tools (i.e. with a type parameter) build with OpenMS 1.8 and below
are incompatible! To fix your old .ini files ....


TOPP tools: 
-ADDED:
  - MapStatistics
	- EICExtractor
-MODIFIED:
  - Split NoiseFilter into NoiseFilterGaussian and NoiseFilterSGolay
	- MascotAdapterOnline now supports Mascot 2.3 servers
-REMOVED:
  - AndiMS is no longer supported on any platform
 
UTIL tools: 
	 
OpenMS library improvements: 
	 
TOPPView improvements:
-MODIFIED:
  - ConsensusFeatures can now be colored using MetaValues
  - Better grid line drawing/calculation, extracted AxisPainter class
  - IdentificationView:
    - added automatic labeling with peptide fragment sequence
    - theoretical spectrum is now hidden by default (labeling contains relevant information for most use cases)
    - automatic zoom to measured MS2 data range

TOPPAS improvements: 
	- TOPPAS allows for interactive download of preconfigured TOPPAS pipelines from OpenMS homepage
	- "Recycling" mode for nodes, useful for database input files (see docu for details)
	 
Changes to the Build System: 
	- TOPPAS now requires Qt's Webkit library
	- Use CMAKE_BUILD_TYPE instead of OPENMS_BUILD_TYPE
  - Removed AndiMS, NetCDF and dependencies	
	
Fixed Issues: 
	 
Detailed list of changes to specific OpenMS classes:
- MODIFIED:
  - AASequence: removed AASequence(ConstIterator, ConstIterator) constructor, since it ignored Terminal Modifications; since there was no way to enable correct construction from two Iterators, we removed it
  


------------------------------------------------------------------------------------------
----                                  OpenMS 1.8                                      ----